GC测试小程序